add graphiler dataset and non-unique sampling

--- a/src/experiments.conf
+++ b/src/experiments.conf
@@ -10,4 +10,11 @@ file_path {
 setting {
 	num_layers = 2
 	hidden_emb_size = 128
+	feat_dim = None
+	num_classes = None
+}
+
+
+graphiler_loader {
+	path = ${file_path.workdir}../dgl_prelim/examples/common_utils_prelim/graphiler_datasets.py
 }
