fixing bugs; abandoning this repo because of performance issue

--- a/src/experiments.conf
+++ b/src/experiments.conf
@@ -9,9 +9,10 @@ file_path {
 
 setting {
 	num_layers = 2
-	hidden_emb_size = 128
-	feat_dim = None
-	num_classes = None
+	hidden_emb_size = 64
+	fan_out = [10,25]
+	feat_dim = 64
+	num_classes = 64
 }
 
 
